# type-any-language

./: .dockerignore  .env.example  .env.example.cms  .env.example.db  .env.example.runtime  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  REGISTRY  VERSION.prod  compose-shared.yml  design-auth.md  dev.sh  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  entrypoint.sh  init_schema.py  requirements.txt
cms/: .env.example.cms  .gitignore  README.md  pyproject.toml  run.sh
cms/cms_pipeline/: README.md  env.py  generate_audio.py  generate_sentences.py  import_vocab.py  manifest.py  storage.py
cms/cms_pipeline/tests/: README.md  test_phase2_e2e.py
cms/content/sentences/: beginner.jsonl
cms/content/vocabulary/: cet6.json
cms/data_pipeline/: README.md  env.py  export_bundle.py  generate_audio.py  generate_sentences.py  import_vocab.py
cms/db-image/: Dockerfile  README.md
cms/pipeline/: env.py  generate_audio.py  generate_sentences.py  import_vocab.py  manifest.py  storage.py
cms/pipeline/tests/: test_phase2_e2e.py
cms/scripts/: _lib_common.sh  bootstrap.sh  cmd_audio.sh  cmd_export.sh  cmd_sentences.sh  cmd_vocab.sh  content.sh  env.sh  etl.sh  full_bake.sh  pipeline.sh  py-run.sh  run.sh  staging.sh
cms/seed/: manifest.yaml
cms/seed/prompts/: sentences.yaml
cms/seed/vocabulary/: beginner.csv  ielts.csv
cms/source/: manifest.yaml
cms/source/prompts/: sentences.yaml
cms/source/vocabulary/: cet6.csv
cms/staging/sentences/: cet4.jsonl  cet6.jsonl  ielts.jsonl
cms/staging/vocabulary/: beginner.json  cet4.json  ielts.json
cms/tools/cms/: README.md  env.py  export_bundle.py  generate_audio.py  generate_sentences.py  import_vocab.py  init_schema.py  manifest.py  storage.py
cms/tools/cms/migrations/: __init__.py  runner.py
cms/tools/cms/migrations/versions/: __init__.py
cms/tools/cms/tests/: README.md  test_phase2_e2e.py
content/: .dockerignore  README.md
db/: .dockerignore  .gitignore  Dockerfile  (+6 more)
(+250 files in other folders)
